# lvgl

./: .gitignore
smart_home/: CMakeLists.txt  Makefile  README.md  app_init.c  app_init.h  lv_conf.h  main.c  test_minimal.c  toolchain-arm.cmake
smart_home/core/: device_manager.c  device_manager.h
smart_home/src/: app_init.c  app_init.h  main.c
smart_home/src/ui/: ui_card.c  ui_card.h  ui_home.c  ui_home.h  ui_styles.c  ui_styles.h
smart_home/tests/: test_device_manager.c
